Cmb API (#2)
* Add cmb apis

* Add tracker service

* fix set relation field

* add router api

* fix nil pointer

* update template config yaml

* update cmb swagger docs

---------
